name:                memegen
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
-- license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable memegen
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       uuid == 1.3.*,
                       configurator,
                       random,
                       lens,
                       warp,
                       text,
                       attoparsec == 0.12.*,
                       filepath >= 1.3.0.2,
                       containers,
                       directory >= 1.2.1.0,
                       pango,
                       cairo,
                       base == 4.*,
                       tightrope == 0.2.*
  -- hs-source-dirs:
  default-language:    Haskell2010
